# ipc-rs

./: Cargo.toml  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
ipc/: all.html  index.html  sidebar-items.js  struct.Guard.html  struct.Semaphore.html
search.desc/ipc/: ipc-desc-0-.js
src/: lib.rs  unix.rs  windows.rs
src/ipc/: lib.rs.html  unix.rs.html
tests/: test.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
