[package]
name = "ipc"
version = "0.0.1"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Marat Radchenko <marat@slonopotamus.org"]
edition = "2018"
license = "Apache-2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.99"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "synchapi", "winbase", "winerror", "winnt"] }

[target.'cfg(unix)'.dev-dependencies]
tempdir = "0.3"
